employee sample data added. directory table created. sort function added

--- a/src/components/EmployeeTable/style.css
+++ b/src/components/EmployeeTable/style.css
@@ -19,15 +19,15 @@ thead button {
 }
 
 thead button.ascending::after {
-  content: '👇';
+  content: '🔽';
   display: inline-block;
-  margin-left: 1em;
+  margin-left: .5em;
 }
 
 thead button.descending::after {
-  content: '☝️';
+  content: '🔼';
   display: inline-block;
-  margin-left: 1em;
+  margin-left: .5em;
 }
 
 tbody td {
