--- a/src/components/EmployeeTable/style.css
+++ b/src/components/EmployeeTable/style.css
@@ -6,32 +6,35 @@ table {
 thead th {
   text-align: left;
   border-bottom: 2px solid black;
+  /* width: 100%; */
 }
 
 thead button {
+  text-align: left;
+  display: inline-block;
   border: 0;
-  border-radius: none;
   font-family: inherit;
   font-weight: 700;
   font-size: inherit;
-  padding: 0.5em;
+  padding: 0.5em 1em;
   margin-bottom: 1px;
+  width: 100% ;
 }
 
 thead button.ascending::after {
-  content: '🔽';
-  display: inline-block;
-  margin-left: .5em;
+  content: "🔽";
+  margin-left: 0.75rem;
 }
 
 thead button.descending::after {
-  content: '🔼';
-  display: inline-block;
-  margin-left: .5em;
+  content: "🔼";
+  margin-left: 0.75rem;
 }
 
 tbody td {
-  padding: 0.5em;
+  padding: 0.25em 0;
+  text-align: left;
+  min-width: 150px;
   border-bottom: 1px solid #ccc;
 }
 
