--- a/src/components/SearchForm/style.css
+++ b/src/components/SearchForm/style.css
@@ -7,3 +7,25 @@ form.search button[type="submit"] {
   float: right;
   margin-top: 10px;
 }
+
+select,
+input {
+  border: none;
+  border-bottom: 1px solid #010101;
+  margin: 0 1rem 0 0.25rem;
+}
+select:focus{
+  outline: none;
+}
+.form-controol {
+  width: 90%;
+  padding: 0 0.25rem;
+}
+
+.form-controol:focus {
+  background: #eeeeee !important;
+  outline: none !important;
+}
+/* .form-controol::after{
+  box-sizing: none !important;
+} */
