--- a/src/components/EmployeeTable/style.css
+++ b/src/components/EmployeeTable/style.css
@@ -40,7 +40,7 @@ thead button.descending::after {
 }
 
 tbody td {
-  padding: 0.25em 0;
+  padding: 0.25em;
   text-align: left;
   min-width: 150px;
   border-bottom: 1px solid #ccc;
