--- a/src/components/EmployeeTable/style.css
+++ b/src/components/EmployeeTable/style.css
@@ -3,6 +3,10 @@ table {
   border-collapse: collapse;
 }
 
+.table-responsive {
+  max-height: 500px;
+}
+
 thead th {
   text-align: left;
   border-bottom: 2px solid black;
