--- a/src/components/SearchForm/style.css
+++ b/src/components/SearchForm/style.css
@@ -12,8 +12,16 @@ input {
   border-bottom: 1px solid #010101;
   margin: 0 1rem 0 0.25rem;
 }
+option,
+select{
+  text-transform: capitalize;
+}
+option{
+   background: #ffffff !important;
+}
 
 select {
+  background-color: #ff897467;
   border: none;
   border-bottom: 1px solid #010101;
   margin: 0 1rem 0 0.25rem;
@@ -24,7 +32,7 @@ select:focus {
 .form-controol {
   width: 100%;
   padding: 0 0.25rem;
-  background: #eeeeee !important;
+  background: #ff897467 !important;
 }
 @media screen and (max-width: 768px) {
   .form-controol {
@@ -32,8 +40,13 @@ select:focus {
   }
 }
 .form-controol:focus {
-  background: #eeeeee !important;
+  background: #ff897467 !important;
   outline: none !important;
+}
+.active-filter {
+  outline: none;
+  background: #fff674bd !important;
+  border: 1px dashed #020202 !important;
 }
 /* .form-controol::after{
   box-sizing: none !important;
